fix missing title if your screen is too small
why didnt i fix this earlier

--- a/index.css
+++ b/index.css
@@ -109,7 +109,7 @@ a {
 main {
   display: flex;
   flex-direction: column;
-  height: 95vh;
+  min-height: 95vh;
   max-width: 840px;
   margin: 0 auto;
   padding: 20px;
